# pocket-pick

./: .gitignore  CLAUDE.md  README.md  build_index.py  pyproject.toml  themes_fabric_export.py
.cursor/rules/: fix-export-script.mdc  json-structure.mdc  pattern-export.mdc  project-overview.mdc
ai_docs/: themes_fabric_integration.md
data/: pattern_index.json
specs/: pocket-pick-v1.md
src/mcp_server_pocket_pick/: __init__.py  server.py
src/mcp_server_pocket_pick/modules/: cache_layer.py  connection_pool.py  data_types.py  embeddings.py  init_db.py  search_engine.py
src/mcp_server_pocket_pick/modules/functionality/: add.py  add_file.py  backup.py  find.py  import_patterns.py  import_patterns_with_bodies.py  index_patterns.py  search_patterns.py  suggest_pattern_tags.py
src/mcp_server_pocket_pick/tests/: test_vector_search.py
src/mcp_server_pocket_pick/tests/functionality/: test_add.py  test_add_file.py  test_backup.py  test_fabric_integration.py  test_fabric_integration_with_bodies.py  test_find.py  test_list.py  test_list_tags.py  test_pattern_search.py  test_remove_get.py  test_suggest_pattern_tags.py  test_to_file_by_id.py
