[project]
name = "mcp-server-pocket-pick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "IndyDevDan", email = "agentic@indydevdan.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
