[project]
name = "mcp-server-pocket-pick"
version = "0.1.0"
description = "Pocket Pick MCP Server implementation"
readme = "README.md"
authors = [
    { name = "IndyDevDan", email = "agentic@indydevdan.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.3.0",
    "thefuzz[speedup]>=0.20.0",
    # Vector embedding dependencies
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.21.0",
    # Performance optimization dependencies
    "diskcache>=5.4.0",
    "asyncio-pool>=0.6.0",
    # Optional advanced features
    "scikit-learn>=1.0.0",
]

[project.scripts]
pocket-pick-server = "mcp_server_pocket_pick.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=8.0.0"]

[tool.uv.sources]
mcp-server-pocket-pick = { path = "src/mcp_server_pocket_pick" }
